# SpaceInvaders

./: CMakeLists.txt  Configuration.cpp  Configuration.h  Constants.cpp  Constants.h  Enums.h  Game.cpp  Game.h  TODO.txt  TranslateRelative.cpp  TranslateRelative.h  configuration.json  main.cpp
CPP-Files/: Background.cpp  EnemyManager.cpp  EnemyShip.cpp  Game.cpp  Graphics.cpp  ObjectFactory.cpp  PlayerShip.cpp  SDLBackground.cpp  SDLBullet.cpp  SDLEnemyShip.cpp  SDLKeyStates.cpp  SDLPlayerShip.cpp  SDLTimer.cpp  Ship.cpp  TextureManager.cpp  Timer.cpp  main.cpp
Controllers/CPP-Files/: BonusManager.cpp  BulletManager.cpp  CollisionDetector.cpp  CollisionManager.cpp  ConfigHandler.cpp  Controller.cpp  EnemyManager.cpp  Game.cpp  LevelController.cpp  PlayerManager.cpp  SDLController.cpp  TextManager.cpp  TextureManager.cpp
Controllers/Headers/: BonusManager.h  BulletManager.h  CollisionDetector.h  CollisionManager.h  ConfigHandler.h  Controller.h  EnemyManager.h  Game.h  LevelController.h  PlayerManager.h  SDLController.h  TextManager.h  TextureManager.h
EntityControllers/CPP-Files/: EnemyShipController.cpp  PlayerShipController.cpp
EntityControllers/Headers/: EnemyShipController.h  PlayerShipController.h
Factories/: AbstractFactory.h  Factory.h  SDLFactory.cpp  SDLFactory.h
Headers/: Background.h  Bullet.h  EnemyManager.h  EnemyShip.h  Game.h  Graphics.h  ObjectFactory.h  PlayerShip.h  SDLBackground.h  SDLBullet.h  SDLEnemyShip.h  SDLKeyStates.h  SDLPlayerShip.h  SDLTimer.h  Ship.h  TextureManager.h  Timer.h
Models/CPP-Files/: Background.cpp  Bonus.cpp  Bullet.cpp  EnemyShip.cpp  Entity.cpp  PlayerLife.cpp  PlayerShip.cpp  RandomNumber.cpp  Score.cpp  Ship.cpp  TextManager.cpp  TextureManager.cpp  Window.cpp
Models/Headers/: Background.h  Bonus.h  Bullet.h  EnemyShip.h  Entity.h  PlayerLife.h  PlayerShip.h  RandomNumber.h  Score.h  Ship.h  TextManager.h  TextureManager.h  Timer.h  Window.h
SDL/CPP-Files/: SDLBackground.cpp  SDLBonus.cpp  SDLBullet.cpp  SDLEnemyShip.cpp  SDLKeyStates.cpp  SDLPlayerLife.cpp  SDLPlayerShip.cpp  SDLScore.cpp  SDLTimer.cpp  SDLWindow.cpp  TextManager.cpp  TextureManager.cpp
SDL/Headers/: SDLBackground.h  SDLBonus.h  SDLBullet.h  SDLEnemyShip.h  SDLPlayerLife.h  SDLPlayerShip.h  SDLScore.h  SDLTimer.h  SDLWindow.h  TextManager.h  TextureManager.h
nlohmann/: json.hpp
